--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!--<meta http-equiv=”Content-Type” content=”text/html; charset=iso-8859-1″>-->
-		<title>Cadastro de Propostas - Cartão VISA</title>
+		<title>RedeSocial</title>
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-route.js"></script> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
@@ -50,7 +50,7 @@
 			        <a class="nav-link" href="#">Home <span class="sr-only">(Página atual)</span></a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" ng-show="$root.usuarioLogado != null" href="#/clientes">Cadastro de Clientes</a> 
+			        <a class="nav-link" ng-show="$root.usuarioLogado != null" href="#/clientes">Cadastro de Pessoas</a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" ng-show="$root.usuarioLogado != null" href="#/propostas">Cadastro de Propostas</a>
@@ -90,7 +90,7 @@
 		</nav>
 	 
 		<div class="generic-container">
-			<h1>Cadastro de Propostas - Cartão VISA</h1>
+			<h1>Rede Social</h1>
 		</div>
 		<div class="mt-5">
 			<h2>			
