--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,13 +21,13 @@
 
 		<script src="./js/app.js"></script>
 		<script src="./js/controller/cliente-controller.js"></script>
-		<script src="./js/controller/usuario-controller.js"></script>
-		<script src="./js/controller/cliente-detalhe-controller.js"></script>
+<!--		<script src="./js/controller/usuario-controller.js"></script>-->
+<!--		<script src="./js/controller/cliente-detalhe-controller.js"></script>-->
 		<script src="./js/controller/main-controller.js"></script>
 		<script src="./js/controller/login-controller.js"></script>
-		<script src="./js/controller/proposta-controller.js"></script>
-		<script src="./js/controller/proposta-auditar-controller.js"></script>
-		<script src="./js/controller/proposta-detalhe-controller.js"></script>
+<!--		<script src="./js/controller/proposta-controller.js"></script>-->
+<!--		<script src="./js/controller/proposta-auditar-controller.js"></script>-->
+<!--		<script src="./js/controller/proposta-detalhe-controller.js"></script>-->
 		<script src="./js/controller/acesso-negado-controller.js"></script>
 		<script src="./js/controller/home-controller.js"></script>
 		<!-- <script src="./js/Interceptor/token-interceptor.js"></script> -->
@@ -52,9 +52,9 @@
 			      <li class="nav-item">
 			        <a class="nav-link" ng-show="$root.usuarioLogado != null" href="#/clientes">Cadastro de Pessoas</a>
 			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" ng-show="$root.usuarioLogado != null" href="#/propostas">Cadastro de Propostas</a>
-			      </li>
+<!--			      <li class="nav-item">-->
+<!--			        <a class="nav-link" ng-show="$root.usuarioLogado != null" href="#/propostas">Cadastro de Propostas</a>-->
+<!--			      </li>-->
 			      <li class="nav-item">
 			        <a class="nav-link" ng-show="$root.usuarioLogado != null && $root.usuarioLogado.permissao == 'auditor'" href="#/propostasAuditar">Auditar Propostas</a>
 			      </li>
