--- a/src/main/resources/static/view/home.html
+++ b/src/main/resources/static/view/home.html
@@ -3,7 +3,7 @@
      <form ng-submit="autenticar()">
          <a class="nav-link" >
 				<div></div>
-				Propostas Cadastradas: {{quantidadePropostas}}
+<!--				Propostas Cadastradas: {{quantidadePropostas}}-->
 				<div></div>
 	     </a>
      </form>
