--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,12 +23,12 @@
 		<script src="./js/controller/cliente-controller.js"></script>
 <!--		<script src="./js/controller/usuario-controller.js"></script>-->
 <!--		<script src="./js/controller/cliente-detalhe-controller.js"></script>-->
-		<script src="./js/controller/main-controller.js"></script>
-		<script src="./js/controller/login-controller.js"></script>
+<!--		<script src="./js/controller/main-controller.js"></script>-->
+<!--		<script src="./js/controller/login-controller.js"></script>-->
 <!--		<script src="./js/controller/proposta-controller.js"></script>-->
 <!--		<script src="./js/controller/proposta-auditar-controller.js"></script>-->
 <!--		<script src="./js/controller/proposta-detalhe-controller.js"></script>-->
-		<script src="./js/controller/acesso-negado-controller.js"></script>
+<!--		<script src="./js/controller/acesso-negado-controller.js"></script>-->
 		<script src="./js/controller/home-controller.js"></script>
 		<!-- <script src="./js/Interceptor/token-interceptor.js"></script> -->
 		<!-- Materialize CSS 
@@ -94,7 +94,7 @@
 		</div>
 		<div class="mt-5">
 			<h2>			
-				{{mensagemQuantidades}}
+<!--				{{mensagemQuantidades}}-->
 			</h2>
 		</div>
 		</br>
