--- a/src/main/resources/static/view/login.html
+++ b/src/main/resources/static/view/login.html
@@ -1,28 +1,11 @@
 
-<!-- 
-<div>
-	<form ng-submit="autenticar()">
-	
-		<label>Usuário: </label>
-		<input type="text" ng-model="usuario.nome">
-		
-		<label>Senha: </label>
-		<input type="password" ng-model="usuario.senha">
-		
-		<input type="submit" value="Autenticar">
-		<div></div>
-		
-	</form>
-</div>
--->
-
 <div>
  <li class="nav-item login">
     <form >
      		<!-- <form ng-submit="autenticar()"> -->
          <a class="nav-link" >
 			
-				<label>Usuário: </label>
+				<label>Usuï¿½rio: </label>
 				<input type="text"  ng-model="usuario.nome">
 				
 				<label>Senha: </label>
@@ -30,7 +13,7 @@
 		
 				<input type="submit" class="btn btn-secondary" value="Entrar" ng-click="autenticar()">
 				<div></div>
-				Usuário Logado: {{usuarioLogado.nome}} - Permissão: {{usuarioLogado.permissao}} 
+				Usuï¿½rio Logado: {{usuarioLogado.nome}} - Permissï¿½o: {{usuarioLogado.permissao}} 
 				<div></div>
 	     </a>
      </form>
