--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,12 +23,12 @@
 		<script src="./js/controller/cliente-controller.js"></script>
 <!--		<script src="./js/controller/usuario-controller.js"></script>-->
 <!--		<script src="./js/controller/cliente-detalhe-controller.js"></script>-->
-<!--		<script src="./js/controller/main-controller.js"></script>-->
-<!--		<script src="./js/controller/login-controller.js"></script>-->
+		<script src="./js/controller/main-controller.js"></script>
+		<script src="./js/controller/login-controller.js"></script>
 <!--		<script src="./js/controller/proposta-controller.js"></script>-->
 <!--		<script src="./js/controller/proposta-auditar-controller.js"></script>-->
 <!--		<script src="./js/controller/proposta-detalhe-controller.js"></script>-->
-<!--		<script src="./js/controller/acesso-negado-controller.js"></script>-->
+		<script src="./js/controller/acesso-negado-controller.js"></script>
 		<script src="./js/controller/home-controller.js"></script>
 		<!-- <script src="./js/Interceptor/token-interceptor.js"></script> -->
 		<!-- Materialize CSS 
@@ -70,7 +70,7 @@
 			       		<form >
 					         <a class="nav-link" > 
 									<label>Usuário: </label>
-									<input type="text"  ng-model="usuario.nome">
+									<input type="text"  ng-model="usuario.login">
 									
 									<label>Senha: </label>
 									<input type="password" ng-model="usuario.senha">
