--- a/src/main/resources/static/view/postagens.html
+++ b/src/main/resources/static/view/postagens.html
@@ -4,16 +4,14 @@
 	}
 </style>
 
-
-
 <div class="campos">
-	<h4>Cadastro de Propostas</h4><br/> 
+	<h4>Posts</h4><br/>
 		
 		<form novalidate name="frmProposta">
 		<div>
 		<label>Data do cadastro: </label>
 		 	<input type="date" class="form-control" style ="font-size:13px; width:150px" ng-minlength="1" ng-maxlength="100" name="txtData" ng-model="proposta.data" required/>
-			<span ng-show="frmProposta.txtData.$error.required && frmProposta.txtData.$dirty" >Campo Data Obrigatório</span>
+			<span ng-show="frmProposta.txtData.$error.required && frmProposta.txtData.$dirty" >Campo Data Obrigatï¿½rio</span>
 		</div>	
 		</br>
 		
