--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,9 @@
     	<link href="./css/bootstrap.min.css" rel="stylesheet">
     	
     	<!-- Estilos customizados para esse template -->
-    	<link href="./css/estilo1.css" rel="stylesheet">    	
+    	<link href="./css/estilo1.css" rel="stylesheet">
+<!--		<link href="./css/estilo2.css" rel="stylesheet">-->
+<!--		<link href="./css/estilo3.css" rel="stylesheet">-->
 
 		<script src="./js/app.js"></script>
 		<script src="./js/controller/cliente-controller.js"></script>
@@ -46,11 +48,12 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 			    <ul class="navbar-nav">
 			      <li class="nav-item active">
-			        <!-- <a class="nav-link" href="#/home">Home <span class="sr-only">(Página atual)</span></a> -->
-			        <a class="nav-link" href="#">Home <span class="sr-only">(Página atual)</span></a>
+
+			        <a class="nav-link" href="#"> Home <span class="sr-only">(Página atual)</span></a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" ng-show="$root.usuarioLogado != null" href="#/clientes">Cadastro de Pessoas</a>
+
+			        <a class="nav-link" ng-show="$root.usuarioLogado == null" href="#/clientes">Não Sou Cadastrado</a>
 			      </li>
 <!--			      <li class="nav-item">-->
 <!--			        <a class="nav-link" ng-show="$root.usuarioLogado != null" href="#/propostas">Cadastro de Propostas</a>-->
@@ -90,7 +93,7 @@
 		</nav>
 	 
 		<div class="generic-container">
-			<h1>Rede Social</h1>
+			<h1><img src="./imagens/icone_rede_social.png" alt="" width=60 height=40><!-- Rede Social --></h1>
 		</div>
 		<div class="mt-5">
 			<h2>			
