--- a/src/main/resources/static/view/usuario.html
+++ b/src/main/resources/static/view/usuario.html
@@ -11,14 +11,14 @@
 		<div class="form-group">
 		<label>Nome: </label>
 			<input type="text" class="form-control" style ="font-size:13px; width:600px" ng-minlength="1" ng-maxlength="100" name="txtNome" ng-model="usuario.nome" required/>
-			<span ng-show="frmUsuario.txtNome.$error.required && frmUsuario.txtNome.$dirty">Nome Obrigatório</span>
+			<span ng-show="frmUsuario.txtNome.$error.required && frmUsuario.txtNome.$dirty">Nome ObrigatÃ³rio</span>
 		</div>		
 		
 		
 		<div>		
 		<label>Senha: </label>
 			<input type="password" ng-model="usuario.senha" class="form-control" placeholder="Ex.: !a@s#d" style ="font-size:13px; width:600px" name="txtSenha"  required/>
-			<span ng-show="frmUsuario.txtSenha.$error.required && frmUsuario.txtSenha.$dirty">Senha tem que conter no mínimo 3 caracteres!</span>
+			<span ng-show="frmUsuario.txtSenha.$error.required && frmUsuario.txtSenha.$dirty">Senha tem que conter no mï¿½nimo 3 caracteres!</span>
 		</div>	
 		<!-- 
 		<div>		
@@ -51,7 +51,7 @@
 			  <thead>
 			    <tr>
 			      <th scope="col">ID</th>
-			      <th scope="col">Usuário</th>
+			      <th scope="col">Usuï¿½rio</th>
 			      <th scope="col">Perfil</th>
 			      <th scope="col">Excluir</th>
 			       <th scope="col">Alterar</th>
