--- a/src/main/resources/static/view/home.html
+++ b/src/main/resources/static/view/home.html
@@ -2,9 +2,9 @@
  <li class="form-group">
      <form ng-submit="autenticar()">
          <a class="nav-link" >
-				<div></div>
-<!--				Propostas Cadastradas: {{quantidadePropostas}}-->
-				<div></div>
+            <div></div>
+<!--			Propostas Cadastradas: {{quantidadePostagens}}-->
+            <div></div>
 	     </a>
      </form>
  </li>
